--- a/style.css
+++ b/style.css
@@ -203,19 +203,19 @@ font-family: 'Times New Roman', Times, serif;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 250px; /* Adjust as needed */
+    width: 250px; 
     padding: 10px;
     border: 1px solid black;
     background-color: white;
     color: black;
     text-align: center;
-    font-family: sans-serif; /* Or any other font */
-    margin: 10px; /* Add margin for spacing */
-    display: inline-block;/* Allows multiple boxes on one line */
+    font-family: sans-serif; 
+    margin: 10px; 
+    display: inline-block;
   }
   
   .mini-box h3 {
-    margin-top: 0; /* Remove default top margin from h3 */
+    margin-top: 0; 
     font-size: 16px;
     font-family: 'Times New Roman', Times, serif;
   }
@@ -225,7 +225,7 @@ font-family: 'Times New Roman', Times, serif;
   }
   
   .mini-box1 h3 {
-    margin-top: 0; /* Remove default top margin from h3 */
+    margin-top: 0; 
     font-size: 16px;
     font-family: 'Times New Roman', Times, serif;
   }
@@ -234,7 +234,7 @@ font-family: 'Times New Roman', Times, serif;
     font-size: 12px;
   }
 
- /* From Uiverse.io by McHaXYT */ 
+
 .button {
   padding: 15px 20px;
   border: none;
@@ -313,30 +313,22 @@ h12 {
   background-color: white;
   color: white;
   padding: 0.1;
-  border-radius: 50%; /* Make it circular */
-  text-decoration: none; /* Remove underline */
+  border-radius: 50%; 
+  text-decoration: none; 
   font-size: 1cap;
   cursor: pointer;
-  display: none; /* Initially hide the button */
-}
+  display: none;
 
-/* Optional: Add a1 hover effect */
-.scroll-to-top:hover {
-  background-color: white;
-}
-
-/* Optional: Add a fade-in effect when scrolling down */
 @keyframes fadeIn {
   from { opacity: 0; }
   to { opacity: 1; }
 }
 
-/* Show the button when scrolling down */
 body {
-  height: 2000px; /* Make the page long enough to scroll */
+  height: 2000px; 
 }
 
-/* Make the button visible when scrolling down */
+
 .scroll-to-top {
-  animation: fadeIn 0.5s; /* Add a fade-in animation */
+  animation: fadeIn 0.5s;
 }
